--- a/Skin_Cancer_CNN.ipynb
+++ b/Skin_Cancer_CNN.ipynb
@@ -1882,6 +1882,15 @@
     "_, test_acc = model.evaluate(val_ds, verbose=0)\n",
     "print('Train: %.3f, Test: %.3f' % (train_acc, test_acc))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Findings \n",
+    "\n",
+    "- After handling the class imbalance problem the model seems to be overfitting on the current architecture, the class imbalance did help in getting the training accuracy high but still it overfitted."
+   ]
   }
  ],
  "metadata": {
